Fix alignment of search button in BlogControls

--- a/src/assets/scss/components/_blog-controls.scss
+++ b/src/assets/scss/components/_blog-controls.scss
@@ -8,7 +8,7 @@
 
   .blog-search-button {
     position: absolute;
-    left: -($blog-controls-search-width + 15px);
+    left: 0;
     display: flex;
     align-items: center;
     height: $blog-controls-line-height;
